syntax = "proto3";
package ingress.solo.io;
option go_package = "github.com/solo-io/gloo/projects/ingress/pkg/api/v1";

import "google/protobuf/any.proto";

import "github.com/solo-io/solo-kit/api/v1/metadata.proto";
import "github.com/solo-io/solo-kit/api/v1/solo-kit.proto";
import "extproto/ext.proto";
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;
option (extproto.equal_all) = true;
/*
A simple wrapper for a Kubernetes Ingress Object.
*/
message Ingress {

    option (core.solo.io.resource).short_name = "ig";
    option (core.solo.io.resource).plural_name = "ingresses";
    // a raw byte representation of the kubernetes ingress this resource wraps
    google.protobuf.Any kube_ingress_spec = 1;
    // a raw byte representation of the ingress status of the kubernetes ingress object
    google.protobuf.Any kube_ingress_status = 2 [(extproto.skip_hashing) = true];

    // Metadata contains the object metadata for this resource
    core.solo.io.Metadata metadata = 7;
}